test/files/neg/t12590A.check
t12590A.scala:4: warning: local val a in method unusedLocal is never used
    val a = 1
        ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
